Introduction to Servlet API

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
 <h1>Hello World!!!</h1>
+<ul>
+    <li>
+        <a href="./parameters/url-get?param=Send Parameter">Send Parameter</a>
+    </li>
+    <li>
+        <a href="./parameters/url-get?param=Send Parameter&name=Test name&code=3">Send Parameters</a>
+    </li>
+</ul>
 </body>
 </html>
